<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.basicdeb.calculadorares.viewModel.calculadoras.FresnelViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ScrollView
            android:id="@+id/scroll_fresnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/adView"
            android:layout_alignParentTop="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/fresnel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/zona_de_fresnel" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/r_de_fresnel_n"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <Spinner
                    android:id="@+id/spinner_fresnel_num"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    android:layout_marginStart="15dp"
                    android:entries="@array/radioFres" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frecuencia"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    android:layout_marginTop="30dp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.frec}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/spinner_fresnel_num"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spinner_fresnel_frecU"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:entries="@array/Frecu"
                    app:layout_constraintBottom_toBottomOf="@+id/editText"
                    app:layout_constraintStart_toEndOf="@+id/editText" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/distancia_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@={viewModel.d1}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/editText"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spinner_fresnel_d1U"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:entries="@array/Metric"
                    app:layout_constraintBottom_toBottomOf="@+id/editText2"
                    app:layout_constraintStart_toEndOf="@+id/editText2" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/distancia_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@={viewModel.d2}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/editText2"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spinner_fresnel_d2U"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:entries="@array/Metric"
                    app:layout_constraintBottom_toBottomOf="@+id/editText3"
                    app:layout_constraintStart_toEndOf="@+id/editText3" />


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/altura_obstaculo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@={viewModel.d3}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/editText3"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spinner_fresnel_altura"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:entries="@array/Metric"
                    app:layout_constraintBottom_toBottomOf="@+id/editText4"
                    app:layout_constraintStart_toEndOf="@+id/editText4" />

                <LinearLayout
                    android:id="@+id/ll_fresnel_antenas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Datos Opcionales" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/altura_antena" />

                        <EditText
                            android:id="@+id/editText5"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@={viewModel.d4}"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/altura_antena2" />

                        <EditText
                            android:id="@+id/editText6"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@={viewModel.d5}"
                            android:inputType="numberDecimal" />

                        <Spinner
                            android:id="@+id/spinner_fresnel_alturaAntena"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:entries="@array/Metric" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_fresnel_calcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttom"
                    android:text="@string/calcular"
                    app:layout_constraintTop_toBottomOf="@+id/ll_fresnel_antenas"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/radio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_fresnel_calcular" />

                <TextView
                    android:id="@+id/tv_fresnel_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100 m "
                    android:text="@={viewModel.radio}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/tv_fresnel_obstruccion"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/obtruccion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/tv_fresnel_obstruccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100 m "
                    android:text="@={viewModel.obstruccion}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    android:layout_marginStart="10dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/admodID">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>


</layout>